[gd_scene load_steps=21 format=3 uid="uid://bh6x3atb6ibqq"]

[ext_resource type="Script" path="res://player/sleigh.gd" id="1_1sigw"]
[ext_resource type="Resource" uid="uid://c7pb7has64jr8" path="res://game_stats.tres" id="2_hjant"]
[ext_resource type="PackedScene" uid="uid://btkcgktcgydvg" path="res://weapons/snowball_cannon.tscn" id="3_hbrjt"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="4_6y4jf"]
[ext_resource type="Texture2D" uid="uid://ysnijatce2v6" path="res://assets/santa-presents/santa Present delievery.png" id="4_nyguw"]
[ext_resource type="Texture2D" uid="uid://bq8urdtxsyuln" path="res://assets/santa-presents/Santa.png" id="4_ra4kh"]
[ext_resource type="Texture2D" uid="uid://c2s82yp7jjk02" path="res://assets/santa-presents/santa Present delievery 2.png" id="5_4hn4t"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="6_lkdr4"]
[ext_resource type="Script" path="res://components/move_component.gd" id="7_3bsw0"]
[ext_resource type="Texture2D" uid="uid://4fnlx1oiy1vu" path="res://assets/santa-presents/santa 2.png" id="7_ao3y0"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="8_47fyc"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="9_upmwn"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_7c0i7"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="10_21hik"]
[ext_resource type="Script" path="res://components/health_component.gd" id="11_1edf7"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="11_2kk36"]
[ext_resource type="PackedScene" uid="uid://d4du2p75v33rv" path="res://effects/explosion_effect.tscn" id="13_oytdb"]
[ext_resource type="PackedScene" uid="uid://2o46vapqr8yu" path="res://shield.tscn" id="15_xh5xk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kvs5w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_nyguw")
}, {
"duration": 1.0,
"texture": ExtResource("5_4hn4t")
}],
"loop": true,
"name": &"delivering",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ra4kh")
}, {
"duration": 1.0,
"texture": ExtResource("7_ao3y0")
}],
"loop": true,
"name": &"flying",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcae1"]
size = Vector2(24, 30)

[node name="Sleigh" type="Node2D"]
script = ExtResource("1_1sigw")
game_stats = ExtResource("2_hjant")
default_weapon = ExtResource("3_hbrjt")

[node name="SleighSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvs5w")
animation = &"flying"
autoplay = "flying"
frame_progress = 0.501076

[node name="WeaponMount" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "scale_component", "flash_component")]
collision_mask = 0
script = ExtResource("4_6y4jf")
health_component = NodePath("../HealthComponent")
scale_component = NodePath("../ScaleComponent")
flash_component = NodePath("../HurtFlashComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_mcae1")
debug_color = Color(0.917647, 0.196078, 0.517647, 0.419608)

[node name="HurtFlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("11_2kk36")
sprite = NodePath("../SleighSprite")
flash_duration = 0.1

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "health_component", "destroy_effect_spawner_component")]
script = ExtResource("6_lkdr4")
actor = NodePath("..")
health_component = NodePath("../HealthComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("11_1edf7")
health = 30

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("7_3bsw0")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("8_47fyc")
move_component = NodePath("../MoveComponent")
speed = 200

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("9_upmwn")
actor = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_21hik")
sprite = NodePath("../SleighSprite")
scale_amount = Vector2(1.2, 1.2)

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_7c0i7")
scene = ExtResource("13_oytdb")

[node name="Shield" parent="." instance=ExtResource("15_xh5xk")]
scale = Vector2(1.5, 1.5)
